--- a/reflections/week07/01.md
+++ b/reflections/week07/01.md
@@ -8,15 +8,15 @@
 
 1. What is ***pair programming***? What are the roles and how do they work?
 
-- Pair programming uses the roles of a 'driver' and a 'navigator' to work on a single goal with a single workstation. This method of working 
+- Pair programming uses the roles of a 'driver' and a 'navigator' to work on a single goal with a single workstation. This method of working has a few drawbacks and advantages, however it is still meant to be used as a tool to complete project tasks effectively.
 
 2. What are some benefits of pair programming?
 
-- 
+- One of the many effects pair programming is supposed to have is that it can increase the quality of code since two pairs of eyes are looking at it and discussing it, which is meant to give them both better comprehension of what they want to achieve. It can also give less experienced developers a chance to work someone that has the skills needed for a project in order to learn those skills.
 
 3. What are some drawbacks to pair programming?
 
-- 
+- Pair programming requires both parties to engage with the task at all times but even if they do, there is no guarantee that the task will be completed in the most efficient way possible. While it is true that code quality will improve with this way of working, it can also lead to even worse maintenance problems later.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- Since the whole day was reserved for lectures instead, the next checkpoint seems to be more important than the afternoon assignments. This lecture started to cover the making of a fullstack application, it might not have been finished today, but I saw that the server side of the application may need to be fully completed so that the client won't take the brunt of any unfinished code on the back-end.
