--- a/reflections/week07/02.md
+++ b/reflections/week07/02.md
@@ -8,12 +8,20 @@
 
 1. What is ***code documentation***? What are some of the ways to document code?
 
+- Code documentation is basically just writing down references on specific pieces of code explaining how they work to other developers. Using readme's or howto guides are good ways to tell developers how your code is running as well as how to understand it.
+
 2. What are some benefits of code documentation?
 
+- Not everyone can look at someone else's code and immediately tell what everything does, this is mostly caused by the naming conventions used by whoever wrote it. Documenting the code with JSDoc would be a good way to show others your application after it is committed.
+
 3. How important is code documentation and why?
+
+- Using JSDoc may seem unnecessary at first, but if it's used correctly, then it can provide a good reference without looking redundant. It can get out of sync if it's allowed to, but so long as the code is thoroughly tested, then the documentation will become a good reference.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+- Tuesday was mostly just lectures as well, but since the checkpoint was assigned, everything that the lecture covered has made a decent reference. It seems as if a large portion of time will be needed to take care of the server in this project, it just seems weird how long the postman tests are for the back end.
