--- a/reflections/week07/03.md
+++ b/reflections/week07/03.md
@@ -8,12 +8,20 @@
 
 1. What is the ***user experience***? What should be considered when developing to create a good UX?
 
+- Good User experience provides customers and application users with good interactions with the product they are using. It essentially refers to how well a product appeals to a user and how well they interact with it.
+
 2. What are some benefits of taking into account the user experience?
 
+- If an audience's feeling's are kept in mind then they are more likely to use the product more, which may lead to them becoming customers in the future. Keeping an application as simple as possible is another way to keeps users engaged in the product, since there won't be as much confusion for them while they are using it.
+
 3. Why is the user experience important?
+
+- Aside from creating an experience that looks nice and is easy to interact with, user experience also helps the people using the application to get what they want out of it. So long as it functions and has everything it needs to provide a good service, the UX should be easy to implement.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+- Getting components to function on vue pages is still a bit of a challenge on this checkpoint, but with most of the services done, there shouldn't be much left to do. It's a good thing that styling with bootstrap has mostly stayed the same with vue so I can focus on the template and the script.
