--- a/reflections/week07/04.md
+++ b/reflections/week07/04.md
@@ -6,16 +6,15 @@
 
 1. Which principles from this week's readings did you implement?
 
-- 
+- I didn't really use any of these principles this week because of the checkpoint, but I did focus a lot on server side code this week. After the data for the server is all written out, it would make sense to focus on the UX if you had the client side written out.
 
 2. What went well this week?
 
-- 
+- I would say that building components wasn't as hard as it was last week. Even though this is only the second checkpoint involving vue, it does seem to get a little easier.
 
 3. What would you do differently?
 
-- 
-
+- I'd say that I would have to timebox more effectively since it took me a while to complete the back end of the project. The only other thing I can think of was how often I got stuck on props, so I may need to read more about those.
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
