--- a/reflections/week07/04.md
+++ b/reflections/week07/04.md
@@ -21,4 +21,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- Since I spent a lot of time on the back end of the checkpoint, I would say that I was a bit challenged by put functions in the service files. Aside from that, I've also found that create functions are easier to understand now since they are far more simple than everything else in those files.
