--- a/reflections/week08/01.md
+++ b/reflections/week08/01.md
@@ -8,12 +8,20 @@
 
 1. What function does a ***developer portfolio*** provide?
 
+- It is used by people looking to advertise their skills for a job, whether they are professionals or someone just starting a career. Future employers will be looking at projects like these to determine who they want to recruit.
+
 2. What makes a developer portfolio effective?
 
+- 
+
 3. What projects do you have that you would include in your portfolio? Why?
+
+- 
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+- 
