--- a/reflections/week08/01.md
+++ b/reflections/week08/01.md
@@ -12,11 +12,11 @@
 
 2. What makes a developer portfolio effective?
 
-- 
+- Not only does it prove your skills to a recruiter, but it also gives you an idea of how far you've gone in the industry. The quality of the portfolio has to be a testament to your education in order to see what you have learned and what more you have to learn.
 
 3. What projects do you have that you would include in your portfolio? Why?
 
-- 
+- I have three in mind that I would use, first of which would be a polished version of my first fullstack vue app because it was my first time coding for a server and a client. The others would be my current capstone project and the nodejs app I helped build for a hackathon.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's work
 
-- 
+- Working on the capstone plan with my team was surprisingly easier than I expected, even though the first pitch didn't go so well. We didn't really know what to expect in the pitch so we just put together a mid fidelity figma and hoped for the best, turns out we needed to put some more detail into it.
