--- a/reflections/week08/02.md
+++ b/reflections/week08/02.md
@@ -8,12 +8,20 @@
 
 1. Why is communication on a small team important?
 
+- During the planning phase everyone needs to be able to speak and plan concisely during this phase. There can never be too much planning once you start a project, so being able to communicate on a team of any size is going to affect the outcome of the project.
+
 2. What adjustments from traditionally sized scrum teams need to be made to use the Agile methodology effectively in a small team?
 
+- 
+
 3. What is the ***unattainable triangle***? What are the tradeoffs of each side?
+
+- 
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+- 
