--- a/reflections/week08/02.md
+++ b/reflections/week08/02.md
@@ -12,11 +12,11 @@
 
 2. What adjustments from traditionally sized scrum teams need to be made to use the Agile methodology effectively in a small team?
 
-- 
+- Whenever scrum teams are "scaled down" the consequence is generally a downgrade in quality, however once team communication has been optimized it can produce better results from a small team. This can be difficult if that was the only problem that team had to deal with, but the best way to deal with that is by using every scrum meeting effectively.
 
 3. What is the ***unattainable triangle***? What are the tradeoffs of each side?
 
-- 
+- The triangle basically refers to a business model that displays the concepts of quality, speed, and price. Each side is impossible to adhere to at the same time when creating a product, because quality drives up the price, the price negatively affects the speed of production, and the speed downgrades the quality.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's work
 
-- 
+- We were able to start coding the capstone today after we finished the figma, it was only thirty minutes but we were able to use the rest of the day drawing out a complete plan. Most of that coding time was just spent writing out models and model schemas for the client and server, but overall we think we are making good headway.
