--- a/reflections/week08/03.md
+++ b/reflections/week08/03.md
@@ -8,15 +8,15 @@
 
 1. What is ***software development testing***?
 
-- 
+- Development testing for specific units of code involves running those units in isolation from the rest of the application in order to prove their quality and functionality. These tests can allow someone to make sure that the smaller components of their project can work so debugging won't be as much of a hassle.
 
 2. What are the benefits of testing in software development?
 
-- 
+- Not only can these tests give a developer great way to make sure every unit of code works, but it can also give the client peace of mind with the development of their product. It can also provide documentation on the code itself, recording how much it changed while in development and how much it improved.
 
 3. What are some potential drawbacks of testing in software development?
 
-- 
+- The biggest drawback about testing is how much time it takes, which can make it seem like extra work that just isn't necessary. Some developers might not like to test because it is unfamiliar territory to them, sometimes it might even be the client themselves who might push against testing because it means investing more time and money in the project.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's work
 
-- 
+- We were swapping places on the client and server for most of the day like we did on the hackathon, but we didn't really like this way of working very much so we decided that we might change our approach to the capstone at some point. Aside from that, we made good headway on the backend today by finishing out the logic needed for the group functionality.
