answered two questions

--- a/reflections/week08/04.md
+++ b/reflections/week08/04.md
@@ -8,11 +8,11 @@
 
 1. What are the three main types of testing we can accomplish in Vue? What does each method provide?
 
-- 
+- Unit testing, component testing, and end to end testing are the three best ways to test software in vue and each method offers a unique role in testing. Unit testing allows the testing of individual units in isolation, component testing allows you to see which component is working from the DOM, and end to end allows you to validate all layers of your application.
 
 2. What testing method do you think is the most useful? Why?
 
-- 
+- I personally prefer unit testing since it lets me to methodically test everything I have one component at a time in vue, it may be a bit slower but at least I can be sure that it works before I move on to something else. It is also something I can easily understand as a stepping stone if I want to learn more about the other frameworks this method supports.
 
 3. What testing method do you think is the least useful? Why?
 
