--- a/reflections/week08/04.md
+++ b/reflections/week08/04.md
@@ -16,7 +16,7 @@
 
 3. What testing method do you think is the least useful? Why?
 
-- 
+- I don't think any of these methods are not useful they all have something to offer, but the one I like the least is component testing. DOM errors for vue may be more descriptive than errors in other languages, but I've only ever found that the DOM only really excels at debugging instead of testing.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's work
 
-- 
+- The first decision our team made today was that we were only going to swap out front end and back end roles once per day so we wouldn't have to distract ourselves by switching gears all the time in this project. That said, I was working on the server for most of the day trying to figure out how our api is going to interact with the server or if it should be able to interact with the server at all.
