--- a/reflections/week09/01.md
+++ b/reflections/week09/01.md
@@ -6,12 +6,20 @@
 
 1. What technologies and principles are you using in your project?
 
+- Our capstone is currently being built in vue as a single page application for board games, we are designing it as a social tool that allows groups to communicate with people in order to play board games. Due to the social aspect, this application will need a lot of many to many relationships built into the framework.
+
 2. What went well so far?
 
+- Server side testing was one of the few things that passed development smoothly, considering how difficult it was to manage so many connections client side. Since this application is meant to be a social site managing all of those relationships has made the application a bit complicated.
+
 3. What would you do differently? Why?
+
+- We would probably dedicate more time towards streamlining our client pages since we have so many functions talking to each other. We have so much data rendering on these pages that their files are starting to look bloated and overwritten, I can't help but wonder if there was an easier way to approach it.
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's work
+
+- It wasn't until I finished most of my work on the server til I saw how complicated the client was. It also didn't help much whenever I had to update the data in models when I needed to push data into another function.
