--- a/reflections/week09/02.md
+++ b/reflections/week09/02.md
@@ -8,7 +8,7 @@
 
 1. What is a ***Github action*** and how do they work?
 
-- Github actions are ways that can easily provide workflows for whatever kind of project you are working on, probably most often for code testing. 
+- Github actions are ways that can easily provide workflows for whatever kind of project you are working on, probably most often for code testing. There are other ways these workflows can be used, such as compressing images and pushing an application onto a platform.
 
 2. What benefits do Github actions provide?
 
