--- a/reflections/week09/02.md
+++ b/reflections/week09/02.md
@@ -12,11 +12,11 @@
 
 2. What benefits do Github actions provide?
 
-- 
+- One of the best benefits that actions has is the automation that comes from workflows, that automation can allow you to test your code on multiple platforms at once. These actions can even allow you to control what happens in one of your repositories when someone interacts with it.
 
 3. What types of ***trigger actions*** can a workflow use? What do they do?
 
-- 
+- One type of trigger action is called a webhook event, this action is able to feed you information about your repository if it is ever starred on a webpage outside of github. Another action of note would be a dispatch event, which is able to send back an event about an external process outside of github.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's work
 
-- 
+- Most of the work that was done today was just about trying to get all the functionality to work for the client, this was mostly a process of debugging but it also required the implementation of new functions that were needed to talk to the services. Rendering data from the API under specific circumstances was one problem we had to work on, such as pagination and hiding components. 
