--- a/reflections/week09/03.md
+++ b/reflections/week09/03.md
@@ -10,15 +10,15 @@
 
 1. What is a ***Base64 encoded image***?
 
-- 
+- It is an encoding schema that converts an image's binary into text, which serves as a storage or delivery format for databases that don't support binary storage. They are only used for the purpose of encoding whenever they need to be rendered into one of those databases, such as in CSS and HTML.
 
 2. What are the drawbacks of using Base64 encoding?
 
-- 
+- The biggest drawback is how Base64 will cause problems with the server cache, which will load the image directly from the server. This will force the page to load the image from the server every time the page is visited, and this is the problem that leads to putting more pressure on the server and more pressure on the bandwidth bill.
 
 3. Why are these drawbacks issues in this day and age versus in the past?
 
-- 
+- Base64 was created in the day when browsers had strict limits on how many connections they could make to a server, this meant that webpages with lots of images would need a loading queue to render them all. However, in the present we have multiplexing which has allowed many more files to be delivered through a connection.
 
 ## Afternoon Assignment Link
 
@@ -26,4 +26,4 @@
 
 Identify at least 1 takeaway from today's work
 
-- 
+- We are still trying to figure out how to get our site functionality to operate with all the connections we have in our pages, this has become our main focus of the week along with styling the application. The only other major goal we have with the capstone is how to render the UI when no one is signed into the application which shouldn't be too hard.
