--- a/reflections/week09/04.md
+++ b/reflections/week09/04.md
@@ -8,7 +8,7 @@
 
 1. What is an ***SSL certificate***?
 
-- 
+- They are small files that establish encrypted links between a web server and the browser, which keeps all the information passed between the two private. A submission form with personal information would be one example where an SSL certificate would be used, webpage functions like these need to be kept safe from hackers and malicious users.
 
 2. What are the different types of certificates? What are they used for?
 
