--- a/reflections/week09/04.md
+++ b/reflections/week09/04.md
@@ -12,11 +12,11 @@
 
 2. What are the different types of certificates? What are they used for?
 
-- 
+- The certificate types required for encryption are called domain, organization, and extended validation. And the certificates required for the domain number are single, multidomain, and wildcard. The single domain type only protects the access of one domain and cannot be used by any others, wildcards can be used for only one domain but also several other subdomains, and multidomain as the name implies is the type that secures multiple domains with the same certificate.
 
 3. What are some benefits of using SSL certificates?
 
-- 
+- The best benefit speaks for itself, keeping hackers and malicious users out of sensitive data whenever someone visits your webpage has to be the number one reason to get an SSL certificate in the first place. Protecting your users privacy should be the top priority for any designer who wants to build a reliable application.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's work
 
-- 
+- We are nearly done with getting the application's functionality to work with all the pages and components, after that it should just be a matter of making the site look nice. The main problem is getting everything to work dynamically without the page needing to be refreshed, this is what will take up the majority of our time on Friday.
