--- a/reflections/week10/01.md
+++ b/reflections/week10/01.md
@@ -8,13 +8,21 @@
 
 1. What are the three categories of data types? How are they different?
 
+- Value, reference, and pointer are the three data types used in CSharp that are differentiated by how they store their memory. The value type stores its data it its own memory space, the reference type stores the data in another address, and the pointer type stores data into an identifier that is written on a declaration.
+
 2. What are the ***value-type*** data types? What differences do you notice from JavaScript?
 
+- The value type data is basically the same naming system for CSharp as it was for javascript. Some of the names might be a little different but it still uses booleans, strings, and numbers to assign data in the models.
+
 3. In your own words how do ***reference types*** get stored in memory? How does this differ from value types?
+
+- Reference types do not store data locally, they just store the address where the data is and uses a method that redirects to the data. Reference Types seem to be suited for handling groups of data that may have already been defined by a value type.
 
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/todo_list)**
 
 Identify at least 1 takeaway from today's assignment
+
+- CSharp may be unfamiliar, but it does not look impossible to learn since it basically does everything else that an MVC does. The language is strict and the names have been changed around, but there are still controllers and services that all have the same functionality as everything else I learned.
