--- a/reflections/week10/02.md
+++ b/reflections/week10/02.md
@@ -8,20 +8,20 @@
 
 1. What is a `List` in C#?
 
-- 
+- Lists are typed out collections of objects that can be changed and sorted in CSharp. They seem to be used to declare the data type of a specific object along with their properties, whether that object is an array, a number, or a string.
 
 2. What `List` methods seem like you might use them often? Why?
 
-- 
+- Probably a list constructor since it creates an empty list that's meant to store integer values and can also be started with items beforehand. These constructors may be useful for building and organizing objects in the database.
 
 3. How would you retrieve an item from a `List`? What method could you use?
 
-- 
+- Select seems to be the primary method in CSharp that can pull an item from a list, another method I've seen is first however I can't say I'm familiar with it. Select looks like it would be more efficient since it can grab the items you will need from a list.
 
 ## Afternoon Assignment Link
 
-**[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
+**[Repo](https://github.com/doctorgrant99/spring23_gregslist_cSharp)**
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- Learning sql has been a bit troublesome, but the server building has still retained the basic rules for the functionality. It is a little bit upsetting that there is so little time devoted to sql, it seems like sql could take up an entire course of its own.
