--- a/reflections/week10/03.md
+++ b/reflections/week10/03.md
@@ -8,11 +8,11 @@
 
 1. In a SQL table, what is the difference between information in a row and information in a column?
 
-- 
+- The data in a row are the names of the different object properties in the table, and the columns will contain the data assigned to the names in the row. Rows will have a data type assigned to them whether they be a string or an integer.
 
 2. Demonstrate the basic structure for creating a new table called "characters" with the values "name, age, description" as strings, and an `int` id.
 
-- 
+- You will first need to write out CREATE TABLE characters to start and then to fill out the id as a NOT NULL integer. After that, it is just a matter of setting the name and description to string type and the age to a number.
 
 3. What are the difference between the following statements: 
 ```sql
@@ -20,7 +20,7 @@ DELETE FROM table_name;
 DROP TABLE table_name;
 ```
 
-- 
+- DELETE FROM is supposed to be a command that deletes a specific row and set a limit to how much data you want to delete. The DROP TABLE is a simple brute force command that deletes the entire table.
 
 ## Afternoon Assignment Link
 
@@ -28,4 +28,4 @@ DROP TABLE table_name;
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- Starting up the server for the AllSpice project was interesting to do since it kind of reminded me of the postman tests from Tower. These tests feel just as difficult as the Tower tests, and I'm not really sure if that's because they are in different languages or if there are just more strict.
