--- a/reflections/week10/04.md
+++ b/reflections/week10/04.md
@@ -8,15 +8,15 @@
 
 1. What is an ***Enum***, and what are some use cases for them?
 
-- 
+- Enums are assigned constants that give specific names to their data values, this means that they cannot be assigned to any other enum of another type. They are usually used to give a value to a symbolic data type that will not be changed in the application.
 
 2. How can you modify an Enum?
 
-- 
+- Enums can be modified by changing their data types and values, since enums are integers by default, the only way to change them would be by specifying its base value. An enum's base value automatically defaults to 0, which means that the value has to be specified as well.
 
 3. How have you used Enums in your afternoon lab projects this far? (if you have not yet, give an example of how you could.)
 
-- 
+- Enums have never been covered in any lecture or afternoon assignment as far as I know, but if I were to use them it would probably be used as some kind of setting control on an application. Using an enum in a recipe creation application could be utilized for assigning a dish with a specific level of spice.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- Working on the get and create tests for AllSpice have been a lot harder to figure out than the edit and delete tests so far. My only other grievance with the application the way in which the ingredients have to have their own table instead of being a part of the recipe table, it might make more sense if there is something on the front end that requires an ingredient table, but right now it just seems like that table just makes the app overcomplicated.
