--- a/reflections/week11/01.md
+++ b/reflections/week11/01.md
@@ -8,12 +8,20 @@
 
 1. What does ***inheritance*** accomplish for us in C#?
 
+- Inheritance is often used to reuse code in other files of an application, however it is more often used to describe a relationship between two classes. Such classes are usually referred to as base and derived classes and used the same way as a parent and child class.
+
 2. How does ***member inheritance*** work in C#? Does a `Class` inherit all members of the base `Class`?
 
+- 
+
 3. How does ***accessibility*** affect inheritance?
+
+- 
 
 ## Afternoon Assignment Link
 
 **[Repo](https://github.com/doctorgrant99/<ASSIGNMENT_REPO>)**
 
 Identify at least 1 takeaway from today's assignment
+
+- 
