--- a/reflections/week11/01.md
+++ b/reflections/week11/01.md
@@ -12,11 +12,11 @@
 
 2. How does ***member inheritance*** work in C#? Does a `Class` inherit all members of the base `Class`?
 
-- 
+- A class's inheritance is usually dependent on its visibility, this will also determine how the class is accessed. There is no guarantee that all of the members of the class will be inherited either, and every class must declare its own constructor to be inheritable.
 
 3. How does ***accessibility*** affect inheritance?
 
-- 
+- Accessing a class can only be done if its members are visible to the parent class, this can be done by setting the class to private readonly. As long as the child is nested withing the parent, the child will be visible, even in a public class.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- AllSpice is an interesting assignment to work on even if the back end seems a bit easier now, I am hoping that it will become a good reference like GameStone once it is finished. As usual with these fullstack projects, it seems like I will need to spend a little more time with the front end.
