--- a/reflections/week11/02.md
+++ b/reflections/week11/02.md
@@ -8,11 +8,11 @@
 
 1. What is the difference between a `PRIMARY KEY` and a `FOREIGN KEY`
 
-- 
+- Primary keys are used to assign identities to a table column, and foreign keys are used as references that call on data from another table. One key difference is that foreign keys need an extra line to tell the table where its data comes from.
 
 2. What is an ***alias***?
 
-- 
+- An alias is an assigned name given to signify the name of a data table or column in a SQL statement, which makes aliasing data like this integral in select statements and other SQL statements that need to be joined together. 
 
 3. Demonstrate how you would query a join statement that would get all of a doctors patients from the following collections:
 
@@ -40,6 +40,10 @@ CREATE TABLE doctors (
     REFERENCES patients(id),
 )
 
+
+SELECT * FROM doctors d
+INNER JOIN doctors d ON d.id = d.doctorId
+INNER JOIN patients p ON p.id = d.patientId;
 ```
 
 ## Afternoon Assignment Link
@@ -48,4 +52,4 @@ CREATE TABLE doctors (
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- At first I thought I would be seeing some kind of hurtle with trying to tie the server and the client together, however the only problems I've been having are trying to render components as usual. I may have to set aside an entire day just for styling if these vue components prove to be difficult.
