--- a/reflections/week11/03.md
+++ b/reflections/week11/03.md
@@ -8,15 +8,15 @@
 
 1. What is SQL injection?
 
-- 
+- An injection is a form of attack that inserts SQL directly into a database via a query statement, and these injections can be used for attacking an application as much as it can be used to defend one. Using SQL injections to defend an application has become a relatively simple and commonplace task in back end development.
 
 2. What are 3 methods SQL injection can be done by?
 
-- 
+- One way to inject SQL is by modifying cookies, since cookies are used to store client side information they can also be changed to inject data on the back end. HTTP headers can be another way to inject data if the input hasn't been sanitized. Finally, there are second order injections, which can be rigged to execute even after a sanitization.
 
 3. How can we detect and sanitize SQL injection attacks?
 
-- 
+- The best way to detect an injection attack is through a tuned IDS that can monitor database logs. Even when an injection attack can be detected there are still many ways to sanitize them, one way to do it is by using parameterized queries that can bind specific variables.
 
 ## Afternoon Assignment Link
 
@@ -24,4 +24,4 @@
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- I am starting to realize how valuable watch effects are in vue, I wasn't able to implement any of them in the Capstone project so I suppose that makes this territory unfamiliar to me. Onmounteds are capable of doing something similar to watch effects, but they seem to be more useful in component testing rather than the rendering itself.
