--- a/reflections/week11/04.md
+++ b/reflections/week11/04.md
@@ -6,7 +6,7 @@
 
 Review and reflect on your experiences in this course, as this is the last lecture before your **final project**. What are your concerns? How do you plan to manage your time? What have you enjoyed most about the course up to this point?
 
-- 
+- My main concern is with the client side code as usual, but with an entire week to complete the final project, I don't think it will be as big of an issue as it was before. Reminding myself to effectively timebox is also something I will need to pay attention to as well, especially if I need to spend any extra time styling the application.
 
 ## Afternoon Assignment Link
 
@@ -14,4 +14,4 @@ Review and reflect on your experiences in this course, as this is the last lectu
 
 Identify at least 1 takeaway from today's assignment
 
-- 
+- I have been able to render most of the components I need, however I might not be able to get around to styling the application. Making the different functionalities work with each other always takes precedence in my priorities at least, so hopefully I will be able to render and hide the functionalities in UI by the time I'm finished.
