--- a/reflections/week12/01.md
+++ b/reflections/week12/01.md
@@ -5,3 +5,9 @@ This is a stressful week! You are working on a project that closely mimics what 
 - How is today going? 
 - Are you managing your stress?
 - What has you most worried?
+
+- The day started out well enough, I basically got the entire back end finished over the weekend so I will only have to worry about the client for the rest of the week.
+
+- The only way I know how to manage stress is by walking away from the code for a bit and timeboxing when appropriate.
+
+- The many to many relationship with the VaultKeep is something I might not know how to do on my own, so I might need some help with the get and delete functions for its model.
