--- a/reflections/week12/02.md
+++ b/reflections/week12/02.md
@@ -5,3 +5,9 @@ Two full days in! Did you make the progress you were hoping for yesterday and to
 - How is today going? 
 - Are you managing your stress?
 - What has you most worried?
+
+- Working on how to render keeps and vaults have been my primary focus today but I am also hoping that I will be able to get started on the forms today along with the modal to support them.
+
+- It is only Tuesday so I can't say I'm that stressed yet, but I can guarantee that I'll have to start managing it in about two days.
+
+- Getting the UI to render everything for mobile while also rendering specific components at once is something that tends to worry me a lot whenever it comes web design.
