--- a/reflections/week12/03.md
+++ b/reflections/week12/03.md
@@ -5,3 +5,9 @@ Have you started the client? How is your Vue application shaping up? Do you have
 - How is today going? 
 - Are you managing your stress?
 - What has you most worried?
+
+- I have been worried about styling the application ever since I finished the server, so I have been just been trying to work on the functionality first.
+
+- I may be getting a bit worried about completing the requirements, however I am scheduling certain times of the day to spend on a specific task.
+
+- The basic functionality is proving to be a bit more of a hassle than I thought it would, so I am just goong to have to get more help in the lab for it.
